--- a/app/views/layout.handlebars
+++ b/app/views/layout.handlebars
@@ -1,9 +1,12 @@
 <html>
-  <title>Digital Mirror</title>
+  <title>Digital</title>
   <head>
+    <link href="../styles/style.css" rel="stylesheet" />
     {{{block "head"}}}
   </head>
   <body>
+    <div id="background">
     {{{block "body"}}}
+    </div>
   </body>
 </html>
