--- a/app/views/index.handlebars
+++ b/app/views/index.handlebars
@@ -1,6 +1,9 @@
 {{#extend "layout"}}
   {{#content "body"}}
-    <h1>Hello, big guy!</h1>
-    <a href='/cool'>C O O L</a>
+  <div id='home'></div>
+    <h1>Welcome to Digital Mirror</h1>
+    <p>Create an <a href='/cool'>Account</a> to get Started on Your Journey To Self Reflection</p>
+    <p><a href='/cool'>Link</a> Supported Social Media Profiles for our Algorithm to Analyse</p>
+    <p>Once our Algorithm Has Analysed Your Data it will Produce a Detailed Reflection of Your Online Self</p>
   {{/content}}
 {{/extend}}
