--- a/app/views/layout.handlebars
+++ b/app/views/layout.handlebars
@@ -1,7 +1,8 @@
+<!doctype html>
 <html>
-  <title>Digital</title>
   <head>
-    <link href="../styles/style.css" rel="stylesheet" />
+    <title>Digital Mirror</title>
+    <link href="/styles/style.css" type="text/css" media="all" rel="stylesheet" />
     {{{block "head"}}}
   </head>
   <body>
