--- a/app/views/login.handlebars
+++ b/app/views/login.handlebars
@@ -3,12 +3,10 @@
   <head>
     {{{block "head"}}}
   </head>
-  <div id='home'>
-    <div class="typewriter"><h1>Welcome to Digital Mirror</h1>
+  <div id='home'></div>
+    <div id=''><h1>Welcome to Digital Mirror</h1></div>
     <p>Create an <a href='/cool'>Account</a> to get Started on Your Journey To Self Reflection</p>
-    <p>Link Supported <a href='/cool'>Social Media Profiles</a> for our Algorithm to Analyse</p>
+    <p><a href='/cool'>Link</a> Supported Social Media Profiles for our Algorithm to Analyse</p>
     <p>Once our Algorithm Has Analysed Your Data it will Produce a Detailed Reflection of Your Online Self</p>
-    </div>
-  </div>
   {{/content}}
 {{/extend}}
