--- a/app/views/index.handlebars
+++ b/app/views/index.handlebars
@@ -4,10 +4,11 @@
     {{{block "head"}}}
   </head>
   <div id='home'>
-    <div class="typewriter"><h1>Welcome to Digital Mirror</h1>
-    <p>Create an <a href='/cool'>Account</a> to get Started on Your Journey To Self Reflection</p>
-    <p>Link Supported <a href='/cool'>Social Media Profiles</a> for our Algorithm to Analyse</p>
-    <p>Once our Algorithm Has Analysed Your Data it will Produce a Detailed Reflection of Your Online Self</p>
+    <div class="typewriter">
+      <h1>Welcome to Digital Mirror</h1>
+      <p>Create an <a href='/cool'>Account</a> to get Started on Your Journey To Self Reflection</p>
+      <p>Link Supported <a href='/connectAccounts'>Social Media Profiles</a> for our Algorithm to Analyse</p>
+      <p>Once our Algorithm Has Analysed Your Data it will Produce a Detailed Reflection of Your Online Self</p>
     </div>
   </div>
   {{/content}}
