--- a/app/public/styles/style.css
+++ b/app/public/styles/style.css
@@ -47,7 +47,8 @@ p {
 h1 {
     color:white;
     font-family: monospace;
-    font-size: 3em
+    font-size: 3em;
+    display:inline-block;
 }
 
 
@@ -55,17 +56,6 @@ h1 {
     overflow: hidden; /* Ensures the content is not revealed until the animation */
     border-right: .15em solid white; /* The typwriter cursor */
     white-space: nowrap; /* Keeps the content on a single line */
-    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-    letter-spacing: .15em; /* Adjust as needed */
-    animation: 
-      typing 3.5s steps(40, end),
-      blink-caret 1s step-end infinite;
-  }
-  .typewriter p:nth-child(2){
-    overflow: hidden; /* Ensures the content is not revealed until the animation */
-    border-right: .15em solid white; /* The typwriter cursor */
-    white-space: nowrap; /* Keeps the content on a single line */
-    padding-top:30x;
     margin: 0 auto; /* Gives that scrolling effect as the typing happens */
     letter-spacing: .15em; /* Adjust as needed */
     animation: 
