--- a/app/public/styles/style.css
+++ b/app/public/styles/style.css
@@ -52,7 +52,7 @@ h1 {
 }
 
 
-.typewriter h1{
+.typeText h1{
     overflow: hidden; /* Ensures the content is not revealed until the animation */
     border-right: .15em solid white; /* The typwriter cursor */
     white-space: nowrap; /* Keeps the content on a single line */
